--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,10 +7,10 @@
 body {
   background-color: #f1f1f1;
 }
-.wrapper {
+/* .wrapper {
   display: grid;
   gap: 20px;
-}
+} */
 /* Navigation section */
 .navCantainer {
   /* display: grid;
@@ -24,6 +24,7 @@ body {
 .logo {
   margin: 1rem;
 }
+
 
 .primary-header {
   align-items: center;
@@ -77,19 +78,20 @@ body {
     padding: min(30vh, 10rem) 2em;
 
     transform: translateX(100%);
-    transition: transform 750ms ease-in-out;
+    transition: transform 650ms ease-in-out;
   }
   .logo{
-    max-width: 330px;
+    width: 250px;
+        
   }
-
+  
   .primary-navigation[data-visible="true"]{
       transform: translateX(0%);
   }
 
   .mobile-nav-toggle {
     display: block;
-    position: absolute;
+    position: fixed;
     z-index: 9999;
     background-color: transparent;
     background-image: url(/images/hamburger_menu_icon.svg);
@@ -106,6 +108,13 @@ body {
 }
 
 /* Navigation section ends*/
+
+/* HEADER SECTION */
+.headerContainer{
+
+}
+/* HEADER SECTION ENDS*/
+
 /* about us section */
 .aboutusContainer {
   display: grid;
@@ -207,19 +216,18 @@ body {
 
 /* Gallery container */
 
-.galleryContainer {
+/* .galleryContainer {
   display: grid;
-  /* grid-template-columns: 1fr 2fr 2fr;
-  grid-template-rows: 1fr 3fr; */
+ 
 
   border-radius: 20px;
   border: 5px solid #606060;
   margin: 0px 25px;
   height: 85vh;
-}
+} */
 
 /* GALLERY SECTION */
-.galleryContainer {
+/* .galleryContainer {
   display: grid;
   grid-template-columns: 1.5fr 2fr 2fr;
   grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr;
@@ -266,12 +274,12 @@ body {
 
   /* grid-column: 4 / 5;
   grid-row: 3 / 4; */
-}
+} */
 
 /* img {object-fit: cover;} */
 
 /* Slideshow container */
-.slideshow-container1,
+/* .slideshow-container1,
 .slideshow-container2,
 .slideshow-container3,
 .slideshow-container4,
@@ -279,10 +287,10 @@ body {
 .slideshow-container6 {
   border: 5px solid #cc560a;
   border-radius: 25px;
-}
+} */
 
 /* Next & previous buttons */
-.prev,
+/* .prev,
 .next {
   cursor: pointer;
   position: absolute;
@@ -296,17 +304,17 @@ body {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-}
+} */
 
 /* Position the "next button" to the right */
-.next {
+/* .next {
   right: 0;
   border-radius: 3px 0 0 3px;
-}
+} */
 
 /* On hover, add a grey background color */
-.prev:hover,
+/* .prev:hover,
 .next:hover {
   background-color: #cc560a;
   color: black;
-}
+} */
